# spectool

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SPEC.md
.github/workflows/: CI.yml  release.yml
src/: badge.rs  command.rs  conformance.rs  lib.rs  main.rs  repository.rs  shell.rs  wdl.rs
src/command/: test.rs
src/conformance/: resource.rs  test.rs
src/conformance/test/: config.rs  result.rs  runner.rs  validation.rs
