[package]
name = "spectool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bon = "3.3.2"
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
fs_extra = "1.3.0"
git2 = "0.20.0"
jaq-core = "3.0.0-beta"
jaq-json = "2.0.0-beta"
jaq-std = "3.0.0-beta"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
